# sketch-haskell

./: .gitignore  cabal.project  haskell.cabal  hie.yaml
Continuations/: Main.hs  Roche2019.hs  Yao2022.hs
Diehl2018/: HindleyMilner.hs  Main.hs
Diehl2018/Archived/: Fresh.hs
Jozefg2017/: Unification.hs
cofree/: DataTypesALaCarte.hs  Main.hs  Orchard.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
example/: test1.fol
lens/: Main.hs
src/: Main.hs  NestedType.hs  Profunctor.hs  RecursionSchemes.hs  StateMonad.hs  TreeShapes.hs  Yoneda.hs
src/FOL/: FirstOrderLogic.hs  Main.hs  Parser.hs
src/Kiselyov2005/: LogicT.hs
