cabal-version:       3.6
name:                haskell
version:             0.1.0.0
license-file:        LICENSE
author:              Benjamin Bray
maintainer:          benrbray@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common
  default-language: GHC2021
  ghc-options:
      -Werror
      -Weverything
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations
      -Wno-missing-export-lists
      -Wno-missing-exported-signatures
      -Wno-missing-import-lists
      -Wno-missing-kind-signatures
      -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-prepositive-qualified-module
      -Wno-safe
      -Wno-unsafe
      -Wno-unused-packages
      -Wno-unused-binds
      -Wno-unused-local-binds
      -Wno-unused-imports
      -fhide-source-paths
      -freverse-errors
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    UndecidableInstances
    ViewPatterns
  build-depends:
    base >= 4.17 && < 5,
    containers,
    text

executable haskell
  import: common
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    transformers
  other-modules:
    NestedType,
    RecursionSchemes,
    TreeShapes,
    Yoneda,
    Profunctor,
    StateMonad

executable jozefg2017
  import: common
  hs-source-dirs: Jozefg2017
  main-is: Main.hs
  build-depends:
    transformers,
    megaparsec,
    logict,
    monad-gen,
    protolude
  other-modules:
    Unification

executable diehl2018
  import: common
  hs-source-dirs: Diehl2018
  main-is: Main.hs
  build-depends:
    transformers,
    megaparsec,
    logict,
    monad-gen,
    protolude,
    mtl
  other-modules:
    HindleyMilner
    Archived.Fresh

executable fol
  import: common
  hs-source-dirs: src/FOL
  main-is: Main.hs
  build-depends:
    transformers,
    megaparsec
  other-modules:
    FirstOrderLogic
    Parser